<resources>
    <string name="app_name">逗伴</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">frechen026</string>
    <string name="nav_header_subtitle">UID. 000001</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Password">密码</string>
    <string name="Username">用户名</string>
    <string name="Login">登录</string>
    <string name="recommend">还没有账号？点我</string>
    <string name="recommend2">已有账号？点我</string>
    <string name="register">注册</string>
    <string name="PasswordConfirm">请确认密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="resetPassword">确认重置</string>
    <string name="remember_password">记住密码</string>
    <string name="search">分类找书</string>
    <string name="top">图书榜单</string>
    <string name="activity">读书资讯</string>
    <string name="BookList">书单推荐</string>
    <string name="newBooks">新书速递</string>
    <string name="all">全部</string>
    <string name="recommendedBooks">编辑力荐</string>
    <string name="bookId">图书编号</string>
    <string name="bookUri">封面url</string>
    <string name="bookTitle">标题</string>
    <string name="bookAuthor">作者</string>
    <string name="bookSummary">图书概述</string>
    <string name="addBook">添加图书</string>
    <string name="classification">专题分类</string>
    <string name="life">生活启示录</string>
    <string name="history">历史</string>
    <string name="biography">传记</string>
    <string name="movie">电影</string>
    <string name="drama">戏剧</string>
    <string name="whodunit">推理</string>
    <string name="fiction">科幻</string>
    <string name="psychology">心理</string>
    <string name="education">教育</string>
    <string name="lifeNovel">生活</string>
    <string name="photograph">摄影</string>
    <string name="drawing">绘画</string>
    <string name="language">语言</string>
    <string name="travel">旅行</string>
    <string name="home">家居</string>
    <string name="food">美食</string>
    <string name="people">名家代表团</string>
    <string name="people1">毛姆</string>
    <string name="people2">村上春树</string>
    <string name="people3">鲁迅</string>
    <string name="people4">张爱玲</string>
    <string name="people5">加缪</string>
    <string name="profession">职业成长营</string>
    <string name="architecture">建筑</string>
    <string name="law">法律</string>
    <string name="design">设计</string>
    <string name="technology">科技</string>
    <string name="cs">计算机</string>
    <string name="economy">经济</string>
    <string name="manage">管理</string>
    <string name="findBooks">分类找书</string>
    <string name="summary">内容简介：</string>
    <string name="book">图书</string>
    <string name="backToTop">回到顶部</string>
    <string name="writeComment">写评论</string>
    <string name="comments">短评：</string>
    <string name="noComment">还没有书评呢/(ㄒoㄒ)/~~抢占顶楼？</string>
    <string name="alreadyLast">已经划到底了呢(*^_^*)看看别的？</string>
    <string name="publish">发布评论</string>
    <string name="createComment">开始创作你的评论吧</string>
    <string name="topBooks">图书榜单</string>
    <string name="topBookList">图书类型榜单</string>
    <string name="activity_news1">作家专区</string>
    <string name="activity_news2">直播活动</string>
    <string name="activity_news3">共读交流</string>
    <string name="ReadingActivity">读书资讯</string>
    <string name="BookListRecommend">书单推荐</string>
    <string name="todayBookList">今日书单</string>
    <string name="bookListName">绿色的书</string>
    <string name="help">帮助反馈</string>
    <string name="question">常见问题</string>
    <string name="feedback">问题反馈</string>
    <string name="historyComment">历史评论</string>
    <string name="userCollection">用户收藏</string>
    <string name="logout">退出登录</string>
</resources>