<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/iv_searchBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findBooks"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classification"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="23sp"/>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="2">

                <TextView
                    android:id="@+id/tv_findHistory"
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/history"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_gray_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/tv_findBiography"
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/biography"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_yellow_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/tv_findMovie"
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/movie"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_pink_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/tv_findDrama"
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/drama"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_green_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/tv_findWhodunit"
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/whodunit"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_blue_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/tv_findFiction"
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/fiction"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_red_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>



            </GridLayout>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="23sp"/>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="3">

                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/psychology"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_gray_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/education"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_yellow_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/lifeNovel"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_pink_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/photograph"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_green_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/drawing"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_blue_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/language"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_red_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>

                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/home"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_yellow_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>

                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/travel"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_gray_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/food"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_pink_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
            </GridLayout>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="23sp"/>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="2">


                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/people3"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_pink_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/people4"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_green_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/people1"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_gray_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/people2"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_yellow_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/people5"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_blue_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
            </GridLayout>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profession"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="23sp"/>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="3">

                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/law"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_yellow_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/architecture"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_gray_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/design"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_pink_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/technology"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_green_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/cs"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_blue_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/economy"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_pink_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:width="0dp"
                    android:height="60dp"
                    android:layout_columnWeight="1"
                    android:text="@string/manage"
                    android:gravity="center"
                    android:background="@drawable/rounded_corner_blue_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>
            </GridLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>